refactor(generaltodo): getOverview API 성능 개선 및 버그 수정